# trade-surveillance-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  anomaly_model.py  dashboard.py  docker-compose.yml  feature_engineering.py  live_simulate.py  migrations.py  mock_data_script.py  pyproject.toml  render.yaml  requirements.txt  trade-surveillance-mvp-stack.md
agents/: __init__.py  orchestrator.py  prompts.py  tools.py
apps/: dashboard.py
docs/: backend-ml-data-plane-plan.md  phase-0-deploy-artifacts.md
tests/: test_config.py
trade_surveillance/: __init__.py  config.py  system_config_keys.py
trade_surveillance/agents/: __init__.py  orchestrator.py  prompts.py  tools.py
trade_surveillance/api/: __init__.py  errors.py  main.py  router.py
trade_surveillance/api/routes/: alerts.py  health.py  investigation_notes.py  investigations.py  metrics.py  model_runs.py  trades.py  users.py
trade_surveillance/aws/: __init__.py  s3.py
trade_surveillance/crud/: __init__.py  alerts.py  investigation_notes.py  investigations.py  metrics.py  model_runs.py  trades.py  users.py
trade_surveillance/db/: __init__.py  migrator.py  session.py
trade_surveillance/models/: __init__.py  alert.py  base.py  client.py  counterparty.py  instrument.py  investigation.py  investigation_note.py  model_run.py  system_config.py  trade.py  trader.py  user.py
trade_surveillance/pipelines/: __init__.py  anomaly_model.py  feature_engineering.py
trade_surveillance/schemas/: __init__.py  alerts.py  common.py  investigation_notes.py  investigations.py  metrics.py  model_runs.py  trades.py  users.py
