[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-surveillance"
version = "0.1.0"
description = "Trade surveillance demo: S3 pipelines, isolation-forest scoring, LangGraph investigations, Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "anthropic>=0.25",
    "streamlit>=1.28",
    "python-dotenv>=1.0",
    "boto3>=1.28",
    "plotly>=5.18",
    "yfinance>=0.2",
    "tqdm>=4.65",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trade_surveillance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["trade_surveillance", "apps", "tests"]
