[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-surveillance"
version = "0.1.0"
description = "Trade surveillance backend: feature pipelines, anomaly scoring, and investigation orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
pipelines = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "tqdm>=4.65",
    "boto3>=1.28",
    "scikit-learn>=1.3",
    "shap>=0.43",
]
agents = [
    "anthropic>=0.25",
    "langgraph>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "boto3>=1.28",
]
all = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "tqdm>=4.65",
    "boto3>=1.28",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "anthropic>=0.25",
    "langgraph>=0.2",
]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trade_surveillance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["trade_surveillance", "tests"]
